[gd_scene load_steps=8 format=3 uid="uid://dp53fjaex67ts"]

[ext_resource type="Shader" path="res://shaders/distortion.gdshader" id="1_hjxob"]
[ext_resource type="Script" path="res://scripts/dialogue_afknpc.gd" id="1_ifp82"]
[ext_resource type="Shader" path="res://shaders/dialogue_demo.gdshader" id="3_g4eoi"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_87j2r"]
noise_type = 5
frequency = 0.0022
fractal_lacunarity = 2.155
fractal_gain = 1.105

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_q851n"]
noise = SubResource("FastNoiseLite_87j2r")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_828uy"]
shader = ExtResource("1_hjxob")
shader_parameter/radius = 0.485
shader_parameter/effectControl = 0.069
shader_parameter/burnSpeed = 0.092
shader_parameter/shape = 0.869
shader_parameter/textureNoise = SubResource("NoiseTexture2D_q851n")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fdiqy"]
shader = ExtResource("3_g4eoi")
shader_parameter/height = 1.0
shader_parameter/frequency = 2.0
shader_parameter/speed = 3.0

[node name="Chatbox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ifp82")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_828uy")
layout_mode = 0
offset_left = 145.0
offset_top = 371.0
offset_right = 1041.0
offset_bottom = 628.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
material = SubResource("ShaderMaterial_fdiqy")
layout_mode = 0
offset_left = 143.0
offset_top = 52.0
offset_right = 447.0
offset_bottom = 129.0
scale = Vector2(2, 2)
text = "Oi! What are you doing here? lkadkjj asdlladjld ajf jjf jajf sjdfj jfjdsfj j jfjdsfj jjfjsdfip spfdspfppf pdspf pds f. fs djfsj fjdjf jsdjf jsfjsdjf
Can't you see I'm on a break? 
Buzz off man..
Hey actually could you help me out a bit?
Could you light me a ciggy? I'm a little impaired right now.
Ahhh, that's the stuff.  Hey you're not so bad man.
Thank you! You're the man! 
... can ya let me enjoy this  my cig in peace at least? 
Listen... I'm just gonna repeat the same line over and over until you buzz off.
You're the man! 
You're the man! 
You're the man! "
visible_characters = 0
visible_ratio = 0.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Sure" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 463.0
offset_top = 588.0
offset_right = 509.0
offset_bottom = 613.0
text = "Sure"

[node name="No" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.025
anchor_bottom = 0.039
offset_left = 542.0
offset_top = 590.0
offset_right = 542.2
offset_bottom = 589.728
text = "No"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Sure" to="." method="_on_button_pressed"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
